# vantage-mc

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  DESIGN.md  Justfile  LICENSE  README.md  build.zig  build.zig.zon  package.json  release-please-config.json
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  SettingsSheet.tsx  ViewerScreen.tsx  bridge.ts  fonts.css  main.tsx  settings.ts  styles.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: assets.rs  lib.rs  main.rs  sidecar.rs
desktop/tests/: smoke_ui.py
docs/: performance-roadmap.md  server-openapi.json  server.md  streaming.md
scripts/: check-versions.mjs  dev.mjs  free-port.mjs  server-dev.mjs  server-dev.test.mjs
site/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/scripts/: build-race.mjs
site/server/: index.html
site/src/: App.tsx  (+8 more)
src/: biome.zig  blocks.zig  chunk.zig  compress.zig  discovery.zig  extract.zig  grid.zig  lang.zig  light.zig  lowres.zig  main.zig  mesh.zig  model.zig  nbt.zig  region.zig  serve.zig  texture.zig  tile.zig  tiling.zig  world.zig
web/: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsup.config.ts  viewer.js  vite.config.ts  vite.viewer.config.ts
(+56 files in other folders)
