[package]
name = "vantage-desktop"
version = "0.8.0"
description = "A native world studio for Vantage Minecraft renders"
authors = ["Luis Padron"]
license = "MIT"
edition = "2021"

[lib]
name = "vantage_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
percent-encoding = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
